# human-to-agent

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  README.md  human-to-agent.yaml  opencode.json  pyproject.toml
.codex/: config.toml
.codex/agents/: asset-maintainer.toml  independent-verifier.toml  maturity-reviewer.toml  practitioner-guide.toml
.github/workflows/: ci.yml
.opencode/agents/: asset-maintainer.md  independent-verifier.md  maturity-reviewer.md  practitioner-guide.md
.opencode/commands/: hf-build.md  hf-review.md  hf-workspace.md  hta-build.md  hta-review.md  hta-workspace.md
PR/supplements/: Agent-Harness.md  Loop Engineering.md  know-your-unknowns-method-cards.md
agents/: asset-maintainer.md  catalog.yaml  independent-verifier.md  maturity-reviewer.md  practitioner-guide.md
docs/architecture/: overview.md
docs/methodology/: five-stages.md
docs/operations/: migration.md  recertification.md  recovery.md
docs/traceability/: completion-audit.md  pr-requirements.md  pr-requirements.yaml  requirement-inventory.yaml
examples/harness-foundry-pilot/: README.md  decision-log.md  input-manifest.yaml
examples/human-to-agent-pilot/: README.md
schemas/v1/: action-package.schema.json  asset-metadata.schema.json  autonomy-approval.schema.json  case.schema.json  context.schema.json  evaluation.schema.json  evaluator.schema.json  event-draft.schema.json  event-replay.schema.json  event-scope.schema.json  event-verification.schema.json  evidence.schema.json  exception.schema.json  gate-report.schema.json  harness.schema.json  human-gate-decision.schema.json  human-gate.schema.json  policy.schema.json  readiness-assessment.schema.json  readiness-policy.schema.json  recertification-plan.schema.json  run.schema.json  skill.schema.json  stage-state.schema.json  state-model.schema.json  stored-event.schema.json  task-contract.schema.json  tool.schema.json  unknown.schema.json  version-vector.schema.json  workflow.schema.json  workspace.schema.json
scripts/: verify_deterministic_build.py  verify_wheel_install.py
skills/: catalog.yaml
skills/_shared/: method-contract.md
skills/case-evaluation/: SKILL.md
skills/deviation-log/: SKILL.md
state/: registry.yaml
(+259 files in other folders)
