[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "harness-foundry"
version = "0.1.0"
description = "File-first incubator for evidence-backed Agent workspaces"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "filelock>=3.18,<4",
  "jinja2>=3.1,<4",
  "pydantic>=2.11,<3",
  "pyyaml>=6.0,<7",
  "rich>=14,<15",
  "typer>=0.16,<1",
]

[dependency-groups]
dev = [
  "hypothesis>=6.135,<7",
  "mypy>=1.16,<2",
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
  "types-pyyaml>=6.0.12,<7",
]

[project.scripts]
hf = "harness_foundry.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/harness_foundry"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["harness_foundry"]

